Neo/26.1.2 Initial Working Version