@@ -1,67 +1,34 @@
 package modernmods.modernfoundry.library.client.model.tools;
 
-import com.google.common.cache.Cache;
-import com.google.common.cache.CacheBuilder;
 import com.google.common.collect.ImmutableList;
-import com.google.gson.JsonDeserializationContext;
-import com.google.gson.JsonObject;
-import com.google.gson.JsonSyntaxException;
-import com.mojang.blaze3d.vertex.PoseStack;
-import com.mojang.math.Axis;
+import com.mojang.datafixers.util.Either;
 import com.mojang.math.Transformation;
-import it.unimi.dsi.fastutil.ints.Int2IntArrayMap;
-import it.unimi.dsi.fastutil.ints.Int2IntFunction;
-import it.unimi.dsi.fastutil.ints.Int2IntMap;
-import lombok.AccessLevel;
-import lombok.AllArgsConstructor;
-import net.minecraft.client.Minecraft;
-import net.minecraft.client.color.item.ItemColor;
-import net.minecraft.client.color.item.ItemColors;
-import net.minecraft.client.multiplayer.ClientLevel;
-import net.minecraft.client.renderer.block.model.BakedQuad;
-import net.minecraft.client.renderer.block.model.ItemOverrides;
-import net.minecraft.client.renderer.texture.MissingTextureAtlasSprite;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.DataResult;
+import com.mojang.serialization.MapCodec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
+import net.minecraft.client.renderer.item.CuboidItemModelWrapper;
+import net.minecraft.client.renderer.item.ItemModel;
+import net.minecraft.client.renderer.item.ModelRenderProperties;
 import net.minecraft.client.renderer.texture.TextureAtlasSprite;
-import net.minecraft.client.resources.model.BakedModel;
-import net.minecraft.client.resources.model.Material;
 import net.minecraft.client.resources.model.ModelBaker;
-import net.minecraft.client.resources.model.ModelState;
+import net.minecraft.client.resources.model.ResolvableModel;
+import net.minecraft.client.resources.model.ResolvedModel;
+import net.minecraft.client.resources.model.geometry.BakedQuad;
+import net.minecraft.client.resources.model.geometry.QuadCollection;
+import net.minecraft.client.resources.model.sprite.Material;
+import net.minecraft.client.resources.model.sprite.TextureSlots;
 import net.minecraft.core.Direction;
-import net.minecraft.core.RegistryAccess;
-import net.minecraft.nbt.CompoundTag;
-import net.minecraft.nbt.Tag;
-import net.minecraft.resources.ResourceLocation;
-import net.minecraft.util.GsonHelper;
-import net.minecraft.util.RandomSource;
-import net.minecraft.world.entity.LivingEntity;
-import net.minecraft.world.inventory.InventoryMenu;
+import net.minecraft.resources.Identifier;
 import net.minecraft.world.item.ItemDisplayContext;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.phys.Vec2;
-import net.neoforged.neoforge.client.model.BakedModelWrapper;
-import net.neoforged.neoforge.client.model.IModelBuilder;
-import net.neoforged.neoforge.client.model.IQuadTransformer;
-import net.neoforged.neoforge.client.model.QuadTransformers;
-import net.neoforged.neoforge.client.model.data.ModelData;
-import net.neoforged.neoforge.client.model.geometry.IGeometryBakingContext;
-import net.neoforged.neoforge.client.model.geometry.IGeometryLoader;
-import net.neoforged.neoforge.client.model.geometry.IUnbakedGeometry;
-import org.joml.Quaternionf;
-import org.joml.Vector3f;
-import modernmods.hilt.client.model.util.ColoredBlockModel;
-import modernmods.hilt.client.model.util.HiltItemLayerModel;
-import modernmods.hilt.data.loadable.Loadable;
-import modernmods.hilt.data.loadable.Loadables;
-import modernmods.hilt.data.loadable.mapping.CompactLoadable;
-import modernmods.hilt.data.loadable.primitive.BooleanLoadable;
-import modernmods.hilt.data.loadable.record.RecordLoadable;
-import modernmods.hilt.util.ItemLayerPixels;
-import modernmods.hilt.util.JsonHelper;
-import modernmods.hilt.util.ReversedListBuilder;
+import org.joml.Matrix4fc;
+import modernmods.mantle.client.model.util.DynamicItemModel;
+import modernmods.mantle.client.model.util.MantleItemLayerModel;
+import modernmods.mantle.util.ItemLayerPixels;
 import modernmods.modernfoundry.TConstruct;
 import modernmods.modernfoundry.common.config.Config;
-import modernmods.modernfoundry.library.client.materials.MaterialRenderInfo.TintedSprite;
-import modernmods.modernfoundry.library.client.materials.MaterialRenderInfoLoader;
 import modernmods.modernfoundry.library.client.modifiers.IBakedModifierModel;
 import modernmods.modernfoundry.library.client.modifiers.ModifierModelMap;
 import modernmods.modernfoundry.library.client.modifiers.ModifierModelMapManager;
@@ -71,217 +38,163 @@ import modernmods.modernfoundry.library.materials.definition.MaterialVariantId;
 import modernmods.modernfoundry.library.modifiers.ModifierEntry;
 import modernmods.modernfoundry.library.modifiers.ModifierId;
 import modernmods.modernfoundry.library.recipe.worktable.ModifierSetWorktableRecipe;
-import modernmods.modernfoundry.library.tools.item.IModifiable;
 import modernmods.modernfoundry.library.tools.nbt.IToolStackView;
 import modernmods.modernfoundry.library.tools.nbt.MaterialIdNBT;
-import modernmods.modernfoundry.library.tools.nbt.ModDataNBT;
 import modernmods.modernfoundry.library.tools.nbt.ModifierNBT;
 import modernmods.modernfoundry.library.tools.nbt.ToolStack;
-import modernmods.modernfoundry.library.utils.TagUtil;
 
 import javax.annotation.Nullable;
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.BitSet;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
-import java.util.concurrent.ExecutionException;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.function.Supplier;
 
 /**
- * Model handling all tools, both multipart and non.
+ * Item model handling all tools, both multipart and non.
+ * <p>
+ * In 26.1 the removed {@code IUnbakedGeometry}/{@code ItemOverrides}/{@code BakedModel} pipeline is replaced by the item
+ * model system: this is an {@link ItemModel.Unbaked} baking to a {@link DynamicItemModel} keyed on a {@link ToolCacheKey}
+ * (the tool's material list plus the modifier cache keys). Material tints and emissivity are baked directly into the quads
+ * (via {@link MaterialModel#getQuadsForMaterial}), replacing the removed item-color handler.
+ * <p>
+ * IN-GAME VALIDATION: the following visual details of the pre-26.1 model bake only make sense on the immutable
+ * {@link QuadCollection} pipeline once rendered in-game and are structured here but not yet reproduced exactly:
+ * <ul>
+ *   <li>Per-context model swapping (large in-hand 2x stretch vs. small vs. GUI front-face vs. left-hand). A single
+ *       identity-transformed geometry is baked, which is correct for the GUI/inventory and non-large tools; the large
+ *       in-hand stretch and left-hand ammo shift need a per-{@link ItemDisplayContext} model set.</li>
+ *   <li>The {@link ItemLayerPixels} per-material occlusion mask ordering.</li>
+ *   <li>Dynamic ammo overlay quads (bows/crossbows): the removed {@code ItemRenderer#getModel}/{@code BakedModel#getQuads}
+ *       extraction is not reproduced; ammo config is retained for a future rebuild.</li>
+ * </ul>
  */
-@AllArgsConstructor(access = AccessLevel.PRIVATE)
-public class ToolModel implements IUnbakedGeometry<ToolModel> {
-  /** Shared loader instance */
-  public static final IGeometryLoader<ToolModel> LOADER = ToolModel::deserialize;
+public final class ToolModel {
+  private ToolModel() {}
+
+  /** Registered id for this item model type */
+  public static final Identifier ID = TConstruct.getResource("tool");
+
   /** Set of transform types that make tools render small */
   private static final BitSet SMALL_TOOL_TYPES = new BitSet();
 
-  /** Registers a new small tool transform type */
+  /**
+   * Registers a new small tool transform type. Retained so callers keep registering small contexts; per-context model
+   * selection is validated in-game (see class docs).
+   */
   public static synchronized void registerSmallTool(ItemDisplayContext type) {
     SMALL_TOOL_TYPES.set(type.ordinal());
   }
 
-  /** Color handler instance for all tools, handles both material and modifier colors */
-  public static final ItemColor COLOR_HANDLER = (stack, index) -> {
-    // TODO: reconsider material item colors, is there a usecase for dynamic colors as opposed to just an animated texture?
-    if (index >= 0) {
-      // for modifiers, we need the overrides instance to properly process
-      BakedModel itemModel = Minecraft.getInstance().getItemRenderer().getItemModelShaper().getItemModel(stack.getItem());
-      if (itemModel != null && itemModel.getOverrides() instanceof MaterialOverrideHandler overrides) {
-        ToolStack tool = ToolStack.from(stack);
-        // modifier model indexes start at the last part
-        List<ModifierEntry> modifiers = (overrides.showTraits ? tool.getModifiers() : tool.getUpgrades()).getModifiers();
-        ModifierEntry[] firsts = new ModifierEntry[overrides.firstModifiers.size()];
-        for (int i = modifiers.size() - 1; i >= 0; i--) {
-          ModifierEntry entry = modifiers.get(i);
-          ModifierId id = entry.getId();
-          int firstIndex = FirstModifier.indexOf(overrides.firstModifiers, id);
-          if (firstIndex != -1) {
-            firsts[firstIndex] = entry;
-          } else {
-            // colors are assumed to not be sensitive to the model's large status
-            IBakedModifierModel modifierModel = overrides.modifierModels.get(entry.getId());
-            if (modifierModel != null) {
-              // indexes from [0,modelIndexes) are passed to this model
-              // if below the range, make the index model relative
-              // if above the range, add the count and let the next model handle it
-              int modelIndexes = modifierModel.getTintIndexes();
-              if (index < modelIndexes) {
-                return modifierModel.getTint(tool, entry, index);
-              }
-              index -= modelIndexes;
-            }
-          }
-        }
-        // first, add the first modifier tints
-        for (int i = firsts.length - 1; i >= 0; i--) {
-          ModifierEntry entry = firsts[i];
-          FirstModifier first = overrides.firstModifiers.get(i);
-          if (entry != null || first.forced) {
-            IBakedModifierModel model = overrides.modifierModels.get(first.id);
-            if (model != null) {
-              int modelIndexes = model.getTintIndexes();
-              if (index < modelIndexes) {
-                if (entry == null) {
-                  entry = new ModifierEntry(first.id, 0);
-                }
-                return model.getTint(tool, entry, index);
-              }
-              index -= modelIndexes;
-            }
-          }
-        }
-        // iterate the constant models in order for simplicity, you can just reverse the order yourself I guess
-        for (ModifierModel model : overrides.modifierModels.constant().values()) {
-          int modelIndexes = model.getTintIndexes();
-          if (index < modelIndexes) {
-            return model.getTint(tool, ModifierEntry.EMPTY, index);
-          }
-          index -= modelIndexes;
-        }
-      }
-    }
-    return -1;
-  };
+  /** Codec for an offset pair, in pixels */
+  private static final Codec<Vec2> OFFSET_CODEC = Codec.FLOAT.listOf().comapFlatMap(
+    list -> list.size() == 2 ? DataResult.success(new Vec2(list.get(0), list.get(1))) : DataResult.error(() -> "Offset must have 2 values"),
+    vec -> List.of(vec.x, vec.y));
 
-  /**
-   * Registers an item color handler for a part item
-   * @param colors  Item colors instance
-   * @param item    Material item
-   */
-  @SuppressWarnings("deprecation")  // yeah forge, you have nice event, this is happening during the event so its fine
-  public static void registerItemColors(ItemColors colors, Supplier<? extends IModifiable> item) {
-    colors.register(ToolModel.COLOR_HANDLER, item.get());
-  }
 
-  /** Gets an offset from JSON, or the default value if absent */
-  private static Vec2 getOffset(JsonObject parent, String key) {
-    if (parent.has(key)) {
-      return MaterialModel.getVec2(parent, key);
-    }
-    return Vec2.ZERO;
-  }
+  /* Data records */
 
-  /** Deserializes the model from JSON */
-  public static ToolModel deserialize(JsonObject json, JsonDeserializationContext context) {
-    List<ToolPart> parts = Collections.emptyList();
-    if (json.has("parts")) {
-      parts = JsonHelper.parseList(json, "parts", ToolPart::read);
+  /** Data class for a single tool part */
+  private record ToolPart(String name, int index) {
+    public static final Codec<ToolPart> CODEC = RecordCodecBuilder.create(inst -> inst.group(
+      Codec.STRING.fieldOf("name").forGetter(ToolPart::name),
+      Codec.INT.optionalFieldOf("index", -1).forGetter(ToolPart::index)
+    ).apply(inst, ToolPart::new));
+    /** Default tool part instance for breakable textures */
+    public static final ToolPart DEFAULT = new ToolPart("tool", -1);
+    /** Default tool part list if one is not defined */
+    public static final List<ToolPart> DEFAULT_PARTS = List.of(DEFAULT);
+
+    /** If true, this part has material variants */
+    public boolean hasMaterials() {
+      return index >= 0;
     }
-    boolean isLarge = GsonHelper.getAsBoolean(json, "large", false);
-    boolean showTraits = GsonHelper.getAsBoolean(json, "show_traits", false);
-    Vec2 offset = getOffset(json, "large_offset");
-    // modifier root fetching
-    List<ResourceLocation> modifierModels = List.of();
-    if (json.has("modifier_maps")) {
-      modifierModels = JsonHelper.parseList(json, "modifier_maps", Loadables.RESOURCE_LOCATION);
-    }
-    List<ResourceLocation> smallModifierRoots = List.of();
-    List<ResourceLocation> largeModifierRoots = List.of();
-    if (json.has("modifier_roots")) {
-      // large model requires an object
+
+    /** Gets the name for this part */
+    public String getName(boolean isLarge) {
       if (isLarge) {
-        JsonObject modifierRoots = GsonHelper.getAsJsonObject(json, "modifier_roots");
-        smallModifierRoots = JsonHelper.parseList(modifierRoots, "small", Loadables.RESOURCE_LOCATION);
-        largeModifierRoots = JsonHelper.parseList(modifierRoots, "large", Loadables.RESOURCE_LOCATION);
-      } else {
-        // small requires an array
-        smallModifierRoots = JsonHelper.parseList(json, "modifier_roots", Loadables.RESOURCE_LOCATION);
+        return "large_" + name;
       }
+      return name;
     }
-    // fetch data related to ammo display
-    ResourceLocation ammoKey = null;
-    Vec2 smallAmmoOffset = Vec2.ZERO;
-    Vec2 largeAmmoOffset = Vec2.ZERO;
-    boolean flipAmmo = false;
-    boolean leftAmmo = false;
-    if (json.has("ammo")) {
-      JsonObject ammo = GsonHelper.getAsJsonObject(json, "ammo");
-      ammoKey = JsonHelper.getResourceLocation(ammo, "key");
-      flipAmmo = GsonHelper.getAsBoolean(ammo, "flip");
-      leftAmmo = GsonHelper.getAsBoolean(ammo, "left");
-      // large has an offset for both models
-      if (isLarge) {
-        if (!ammo.has("small_offset") && !ammo.has("large_offset")) {
-          throw new JsonSyntaxException("Ammo must either have a small or large offset provided");
-        }
-        smallAmmoOffset = getOffset(ammo, "small_offset");
-        largeAmmoOffset = getOffset(ammo, "large_offset");
-      } else {
-        // no large is just a single offset, and is required
-        smallAmmoOffset = MaterialModel.getVec2(ammo, "offset");
-      }
-    }
-
-    // modifiers first
-    List<FirstModifier> firstModifiers = FirstModifier.LOADABLE.getOrDefault(json, "first_modifiers", List.of());
-    return new ToolModel(parts, isLarge, offset, modifierModels, smallModifierRoots, largeModifierRoots, firstModifiers, ammoKey, flipAmmo, leftAmmo, smallAmmoOffset, largeAmmoOffset, showTraits);
   }
 
-  /** List of tool parts in this model */
-  private final List<ToolPart> toolParts;
-  /** If true, this is a large tool and uses double resolution textures in hand */
-  private final boolean isLarge;
-  /** Transform matrix to apply to child parts */
-  private final Vec2 offset;
-  /** List of modifier models to read for this tool. Separate from the tool model for the sake of reuse. */
-  private final List<ResourceLocation> modifierModels;
-  /**
-   * Location to fetch modifier textures for small variant.
-   * @deprecated use {@link #modifierModels}
-   */
-  @Deprecated
-  private final List<ResourceLocation> smallModifierRoots;
-  /**
-   * Location to fetch modifier textures for large variant
-   * @deprecated use {@link #modifierModels}
-   */
-  @Deprecated
-  private final List<ResourceLocation> largeModifierRoots;
-  /** Modifiers that show first on tools, bypassing normal sort order */
-  private final List<FirstModifier> firstModifiers;
-  /** Location in tool NBT to find the ammo */
-  @Nullable
-  private final ResourceLocation ammoKey;
-  /** If true, flips the ammo horizontally, as most bows have opposite orientation from ammo */
-  private final boolean flipAmmo;
-  /** If true, left handed models should have the ammo shifted to the left */
-  private final boolean leftAmmo;
-  /** Offset to apply to ammo quads for the small model */
-  private final Vec2 smallAmmoOffset;
-  /** Offset to apply to ammo quads for the large model */
-  private final Vec2 largeAmmoOffset;
-  /** If true, traits are displayed on the tool model. If false, just modifiers. */
-  private final boolean showTraits;
+  /** Codec for a modifier id */
+  private static final Codec<ModifierId> MODIFIER_ID_CODEC = Identifier.CODEC.xmap(ModifierId::new, ModifierId::getIdentifier);
+
+  /** Modifier that may be forced */
+  private record FirstModifier(ModifierId id, boolean forced) {
+    public static final Codec<FirstModifier> CODEC = Codec.either(
+      MODIFIER_ID_CODEC,
+      RecordCodecBuilder.<FirstModifier>create(inst -> inst.group(
+        MODIFIER_ID_CODEC.fieldOf("name").forGetter(FirstModifier::id),
+        Codec.BOOL.optionalFieldOf("forced", false).forGetter(FirstModifier::forced)
+      ).apply(inst, FirstModifier::new))
+    ).xmap(
+      either -> either.map(id -> new FirstModifier(id, false), Function.identity()),
+      first -> first.forced ? com.mojang.datafixers.util.Either.right(first) : com.mojang.datafixers.util.Either.left(first.id));
+
+    /** Gets the index of a modifier in the list */
+    public static int indexOf(List<FirstModifier> list, ModifierId id) {
+      for (int i = 0; i < list.size(); i++) {
+        if (list.get(i).id.equals(id)) {
+          return i;
+        }
+      }
+      return -1;
+    }
+  }
+
+  /** Ammo display config; retained from JSON for a future dynamic-ammo rebuild (see class docs) */
+  private record AmmoConfig(Identifier key, boolean flip, boolean left, Vec2 smallOffset, Vec2 largeOffset) {
+    public static final Codec<AmmoConfig> CODEC = RecordCodecBuilder.create(inst -> inst.group(
+      Identifier.CODEC.fieldOf("key").forGetter(AmmoConfig::key),
+      Codec.BOOL.optionalFieldOf("flip", false).forGetter(AmmoConfig::flip),
+      Codec.BOOL.optionalFieldOf("left", false).forGetter(AmmoConfig::left),
+      OFFSET_CODEC.optionalFieldOf("small_offset", Vec2.ZERO).forGetter(AmmoConfig::smallOffset),
+      OFFSET_CODEC.optionalFieldOf("large_offset", Vec2.ZERO).forGetter(AmmoConfig::largeOffset)
+    ).apply(inst, AmmoConfig::new));
+  }
+
+  /** Cache key holding everything unique to a baked tool model. Identity considers only the materials and modifier data. */
+  static final class ToolCacheKey {
+    private final List<MaterialVariantId> materials;
+    private final List<Object> modifierData;
+    /** Tool carried for baking modifier quads; excluded from identity */
+    @Nullable
+    private final IToolStackView tool;
+
+    ToolCacheKey(List<MaterialVariantId> materials, List<Object> modifierData, @Nullable IToolStackView tool) {
+      this.materials = materials;
+      this.modifierData = modifierData;
+      this.tool = tool;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+      if (this == o) {
+        return true;
+      }
+      if (!(o instanceof ToolCacheKey other)) {
+        return false;
+      }
+      return materials.equals(other.materials) && modifierData.equals(other.modifierData);
+    }
+
+    @Override
+    public int hashCode() {
+      return Objects.hash(materials, modifierData);
+    }
+  }
+
+
+  /* Modifier quads */
 
   /**
-   * adds quads for relevant modifiers
+   * Adds quads for relevant modifiers
    * @param spriteGetter    Sprite getter instance
    * @param modifierModels  Map of modifier models
    * @param tool            Tool instance
@@ -332,7 +245,7 @@ public class ToolModel implements IUnbakedGeometry<ToolModel> {
           }
         }
       }
-      // iterate the constant models in order for simplicity, you can just reverse the order yourself I guess
+      // iterate the constant models in order for simplicity
       for (ModifierModel model : modifierModels.constant().values()) {
         model.addQuads(tool, ModifierEntry.EMPTY, spriteGetter, transforms, isLarge, modelIndex, quadConsumer, pixels);
         modelIndex += model.getTintIndexes();
@@ -340,460 +253,182 @@ public class ToolModel implements IUnbakedGeometry<ToolModel> {
     }
   }
 
-  /** Modifier that may be forced */
-  private record FirstModifier(ModifierId id, boolean forced) {
-    private static final Loadable<List<FirstModifier>> LOADABLE = CompactLoadable.of(
-      RecordLoadable.create(ModifierId.PARSER.requiredField("name", FirstModifier::id), BooleanLoadable.INSTANCE.defaultField("forced", false, false, FirstModifier::forced), FirstModifier::new),
-      ModifierId.PARSER.flatXmap(id -> new FirstModifier(id, false), FirstModifier::id),
-      f -> !f.forced).list(0);
 
-    /** Gets the index of a modifier in the list */
-    public static int indexOf(List<FirstModifier> list, ModifierId id) {
-      for (int i = 0; i < list.size(); i++) {
-        if (list.get(i).id.equals(id)) {
-          return i;
-        }
-      }
-      return -1;
+  /* Item model */
+
+  /**
+   * Adds an item-layer quad. The extruded side walls (X/Z-plane faces, i.e. non-Z-axis normals) are emitted from both
+   * winding directions so the item shows thickness from any angle. The front/back fill faces (Z-axis normals) are left
+   * single-sided: a coplanar reverse-wound copy sits at the same z as the original and, drawn later, wins the equal-z
+   * depth test; facing away from the light it renders the fill near-black, leaving the tool looking like a hollow shell
+   * with no interior fill. Keeping the fill single-sided draws it lit and solid.
+   */
+  private static void addToolQuad(QuadCollection.Builder builder, BakedQuad quad) {
+    builder.addUnculledFace(quad);
+    if (quad.direction().getAxis() != Direction.Axis.Z) {
+      builder.addUnculledFace(new BakedQuad(
+        quad.position0(), quad.position3(), quad.position2(), quad.position1(),
+        quad.packedUV0(), quad.packedUV3(), quad.packedUV2(), quad.packedUV1(),
+        quad.direction().getOpposite(), quad.materialInfo()));
     }
-  }
-
-  /** Makes a model builder for the given context and overrides */
-  private static IModelBuilder<?> makeModelBuilder(IGeometryBakingContext context, ItemOverrides overrides, TextureAtlasSprite particle) {
-    return IModelBuilder.of(context.useAmbientOcclusion(), false, false, context.getTransforms(), overrides, particle, HiltItemLayerModel.getDefaultRenderType(context));
   }
 
   /**
-   * Same as {@link #bake(IGeometryBakingContext, ModelBaker, Function, ModelState, ItemOverrides, ResourceLocation)}, but uses fewer arguments and does not require an instance
-   * @param owner           Model configuration
-   * @param spriteGetter    Sprite getter function
-   * @param largeTransforms Transform to apply to the large parts. If null, only generates small parts
-   * @param parts           List of tool parts in this tool
-   * @param modifierModels  Map of modifier models for this tool
-   * @param firstModifiers  List of modifiers to show first on the tool
-   * @param showTraits      If true, shows the traits on the tool. False shows just crafted modifiers.
-   * @param materials       Materials to use for the parts
-   * @param tool            Tool instance for modifier parsing
-   * @param overrides       Override instance to use, will either be empty or {@link MaterialOverrideHandler}
-   * @param smallExtraQuads Additional quads to add to the small model. Should already be transformed as desired.
-   * @param largeExtraQuads Additional quads to add to the large model. Should already be transformed as desired.
-   * @param leftExtraQuads  Additional quads to add to the left-handed model. Will be a large model if {@code largeTransforms} is non-null, otherwise small.
-   * @return  Baked model
+   * Unbaked tool item model.
+   * @param baseModel          Model providing the texture slots (part textures) and transforms
+   * @param parts              List of tool parts in this model
+   * @param isLarge            If true, this is a large tool and uses double resolution textures in hand
+   * @param largeOffset        Pixel offset applied to the large model
+   * @param modifierModels     List of modifier model maps to read
+   * @param smallModifierRoots Legacy small modifier texture roots
+   * @param largeModifierRoots Legacy large modifier texture roots
+   * @param firstModifiers     Modifiers shown first on the tool
+   * @param ammo               Optional ammo display config
+   * @param showTraits         If true, traits are displayed on the tool model
    */
-  private static BakedModel bakeInternal(IGeometryBakingContext owner, Function<Material, TextureAtlasSprite> spriteGetter, @Nullable Transformation largeTransforms,
-                                         List<ToolPart> parts, ModifierModelMap modifierModels, List<FirstModifier> firstModifiers, boolean showTraits,
-                                         List<MaterialVariantId> materials, @Nullable IToolStackView tool, ItemOverrides overrides,
-                                         Collection<BakedQuad> smallExtraQuads, Collection<BakedQuad> largeExtraQuads, Collection<BakedQuad> leftExtraQuads) {
-    Transformation smallTransforms = Transformation.identity();
-
-    // TODO: would be nice to support render types per material/per modifier
-    // small model is used in GUIs (though that will be filtered to just front faces) and in small tool contexts like casting blocks
-    ReversedListBuilder<Collection<BakedQuad>> smallQuads = new ReversedListBuilder<>();
-    ItemLayerPixels smallPixels = new ItemLayerPixels();
-    // large model is used in all other places
-    ReversedListBuilder<Collection<BakedQuad>> largeQuads = largeTransforms != null ? new ReversedListBuilder<>() : smallQuads;
-    ItemLayerPixels largePixels = largeTransforms != null ? new ItemLayerPixels() : smallPixels;
-
-    // add quads for all modifiers first, for the sake of the item layer pixels
-    if (tool != null && !modifierModels.isEmpty()) {
-      addModifierQuads(spriteGetter, modifierModels, firstModifiers, showTraits, tool, smallQuads::add, smallPixels, smallTransforms, false);
-      // if we have a large model, that means we will fetch models twice, once for large then again for small
-      if (largeTransforms != null) {
-        addModifierQuads(spriteGetter, modifierModels, firstModifiers, showTraits, tool, largeQuads::add, largePixels, largeTransforms, true);
-      }
-    }
-
-    // add quads for all parts
-    TextureAtlasSprite particle = null;
-    for (int i = parts.size() - 1; i >= 0; i--) {
-      ToolPart part = parts.get(i);
-
-      // part with materials
-      if (part.hasMaterials()) {
-        // start by fetching the material we are rendering at this position, should only be null on invalid tools or during the initial bake
-        int index = part.index();
-        MaterialVariantId material = index < materials.size() ? materials.get(index) : IMaterial.UNKNOWN_ID;
-        TintedSprite materialSprite = MaterialModel.getMaterialSprite(spriteGetter, owner.getMaterial(part.getName(false)), material);
-        particle = materialSprite.sprite();
-
-        // need full quads for both as small is directly rendered in a few non-GUI cases
-        smallQuads.add(HiltItemLayerModel.getQuadsForSprite(materialSprite.color(), -1, materialSprite.sprite(), smallTransforms, materialSprite.emissivity(), smallPixels));
-        if (largeTransforms != null) {
-          largeQuads.add(MaterialModel.getQuadsForMaterial(spriteGetter, owner.getMaterial(part.getName(true)), material, -1, largeTransforms, largePixels));
-        }
-      } else {
-        // part without materials
-        particle = spriteGetter.apply(owner.getMaterial(part.getName(false)));
-        // same drill as above
-        smallQuads.add(HiltItemLayerModel.getQuadsForSprite(-1, -1, particle, smallTransforms, 0, smallPixels));
-        if (largeTransforms != null) {
-          largeQuads.add(HiltItemLayerModel.getQuadsForSprite(-1, -1, spriteGetter.apply(owner.getMaterial(part.getName(true))), largeTransforms, 0, largePixels));
-        }
-      }
-    }
-    // should never happen, but just in case prevents a NPE
-    if (particle == null) {
-      particle = spriteGetter.apply(new Material(InventoryMenu.BLOCK_ATLAS, MissingTextureAtlasSprite.getLocation()));
-      TConstruct.LOG.error("Created tool model without a particle sprite, this means it somehow has no parts. This should not be possible");
-    }
-
-    // time to bake the model. Opted for a small amount of redundant code to minimize operations as this is run dynamically
-    IModelBuilder<?> smallBuilder = makeModelBuilder(owner, overrides, particle);
-    IModelBuilder<?> guiBuilder = makeModelBuilder(owner, overrides, particle);
-    IModelBuilder<?> leftBuilder = !leftExtraQuads.isEmpty() ? makeModelBuilder(owner, overrides, particle) : null;
-
-    // if we lack a large model, feed left builder with small quads
-    if (largeTransforms == null && leftBuilder != null) {
-      smallQuads.build(quads -> quads.forEach(quad -> {
-        smallBuilder.addUnculledFace(quad);
-        leftBuilder.addUnculledFace(quad);
-        if (quad.getDirection() == Direction.SOUTH) {
-          guiBuilder.addUnculledFace(quad);
-        }
-      }));
-    } else {
-      smallQuads.build(quads -> quads.forEach(quad -> {
-        smallBuilder.addUnculledFace(quad);
-        if (quad.getDirection() == Direction.SOUTH) {
-          guiBuilder.addUnculledFace(quad);
-        }
-      }));
-    }
-
-    // smallExtraQuads are never added to the leftBuilder
-    for (BakedQuad quad : smallExtraQuads) {
-      smallBuilder.addUnculledFace(quad);
-      if (quad.getDirection() == Direction.SOUTH) {
-        guiBuilder.addUnculledFace(quad);
-      }
-    }
-    BakedModel small = smallBuilder.build();
-    BakedModel gui = guiBuilder.build();
-
-    // if no large, use small for right
-    BakedModel right;
-    if (largeTransforms != null) {
-      IModelBuilder<?> largeBuilder = makeModelBuilder(owner, overrides, particle);
-      // if left, fill with large quads
-      if (leftBuilder != null) {
-        largeQuads.build(quads -> quads.forEach(quad -> {
-          largeBuilder.addUnculledFace(quad);
-          leftBuilder.addUnculledFace(quad);
-        }));
-      } else {
-        largeQuads.build(quads -> quads.forEach(largeBuilder::addUnculledFace));
-      }
-      // left has not received any extra quads
-      for (BakedQuad quad : largeExtraQuads) {
-        largeBuilder.addUnculledFace(quad);
-      }
-      right = largeBuilder.build();
-    } else {
-      right = small;
-    }
-
-    // if no left, use right for left
-    BakedModel left;
-    if (leftBuilder != null) {
-      for (BakedQuad quad : leftExtraQuads) {
-        leftBuilder.addUnculledFace(quad);
-      }
-      left = leftBuilder.build();
-    } else {
-      left = right;
-    }
-
-    // finish baking model
-    return new BakedToolModel(right, left, small, gui);
+  /**
+   * Small/large modifier texture roots. Authored as either a flat array (non-large tools, where the same roots serve
+   * every context) or an object {@code {"small":[...],"large":[...]}} (large tools, whose in-hand render uses a distinct
+   * double-resolution root). The single {@code small_modifier_roots} JSON key carries both forms, matching the authored
+   * item models; a bare array maps small == large.
+   */
+  private record ModifierRoots(List<Identifier> small, List<Identifier> large) {
+    static final ModifierRoots EMPTY = new ModifierRoots(List.of(), List.of());
+    private static final Codec<List<Identifier>> LIST = Identifier.CODEC.listOf();
+    private static final Codec<ModifierRoots> OBJECT = RecordCodecBuilder.create(inst -> inst.group(
+      LIST.optionalFieldOf("small", List.of()).forGetter(ModifierRoots::small),
+      LIST.optionalFieldOf("large", List.of()).forGetter(ModifierRoots::large)
+    ).apply(inst, ModifierRoots::new));
+    static final Codec<ModifierRoots> CODEC = Codec.either(LIST, OBJECT).xmap(
+      either -> either.map(list -> new ModifierRoots(list, list), Function.identity()),
+      roots -> roots.small().equals(roots.large()) ? Either.left(roots.small()) : Either.right(roots));
   }
 
-  @Override
-  public BakedModel bake(IGeometryBakingContext owner, ModelBaker baker, Function<Material,TextureAtlasSprite> spriteGetter, ModelState modelTransform, ItemOverrides overrides) {
-    ResourceLocation modelLocation = ResourceLocation.tryParse(owner.getModelName());
-    if (modelLocation == null) {
-      modelLocation = TConstruct.getResource("tool_dynamic");
-    }
-    // warn on deprecated keys
-    if (showTraits) {
-      TConstruct.LOG.warn("Using deprecated key 'show_traits' in tool model {}, use 'constant' in modifier model maps with TraitModel instead", modelLocation);
-    }
-    for (FirstModifier modifier : firstModifiers) {
-      if (modifier.forced) {
-        TConstruct.LOG.warn("Using 'forced' in 'first_modifiers' is deprecated in tool model {}, use 'constant' in modifier model maps instead", modelLocation);
-        break;
-      }
+  public record Unbaked(Identifier baseModel, List<ToolPart> parts, boolean isLarge, Vec2 largeOffset,
+                        List<Identifier> modifierModels, ModifierRoots modifierRoots,
+                        List<FirstModifier> firstModifiers, Optional<AmmoConfig> ammo, boolean showTraits) implements ItemModel.Unbaked {
+    public static final MapCodec<Unbaked> MAP_CODEC = RecordCodecBuilder.mapCodec(inst -> inst.group(
+      Identifier.CODEC.fieldOf("base_model").forGetter(Unbaked::baseModel),
+      ToolPart.CODEC.listOf().optionalFieldOf("parts", List.of()).forGetter(Unbaked::parts),
+      Codec.BOOL.optionalFieldOf("large", false).forGetter(Unbaked::isLarge),
+      OFFSET_CODEC.optionalFieldOf("large_offset", Vec2.ZERO).forGetter(Unbaked::largeOffset),
+      Identifier.CODEC.listOf().optionalFieldOf("modifier_maps", List.of()).forGetter(Unbaked::modifierModels),
+      ModifierRoots.CODEC.optionalFieldOf("small_modifier_roots", ModifierRoots.EMPTY).forGetter(Unbaked::modifierRoots),
+      FirstModifier.CODEC.listOf().optionalFieldOf("first_modifiers", List.of()).forGetter(Unbaked::firstModifiers),
+      AmmoConfig.CODEC.optionalFieldOf("ammo").forGetter(Unbaked::ammo),
+      Codec.BOOL.optionalFieldOf("show_traits", false).forGetter(Unbaked::showTraits)
+    ).apply(inst, Unbaked::new));
+
+    /** Small-context modifier texture roots (see {@link ModifierRoots}). */
+    public List<Identifier> smallModifierRoots() {
+      return modifierRoots.small();
     }
 
-    // default is just a single part named tool, no material
-    List<ToolPart> toolParts = this.toolParts;
-    if (toolParts.isEmpty()) {
-      toolParts = ToolPart.DEFAULT_PARTS;
-    }
-    // if requested, check all that all material textures exist
-    if (Config.CLIENT.logMissingMaterialTextures.get()) {
-      for (ToolPart part : toolParts) {
-        if (part.hasMaterials()) {
-          MaterialModel.validateMaterialTextures(owner, spriteGetter, part.getName(false), null);
-          if (isLarge) {
-            MaterialModel.validateMaterialTextures(owner, spriteGetter, part.getName(true), null);
-          }
-        }
-      }
-    }
-    // load modifier models
-    ModifierModelMap modifierModels = ModifierModelMapManager.INSTANCE.getModelsForTool(spriteGetter, this.modifierModels, smallModifierRoots, largeModifierRoots, modelLocation);
-
-    // build transforms for various states
-    // large tools are stretched in X and Y by 200%, and get a special offset
-    Transformation largeTransforms = isLarge ? new Transformation(new Vector3f((offset.x - 8) / 32, (-offset.y - 8) / 32, 0), null, new Vector3f(2, 2, 1), null) : null;
-    // arrow quads are flipped, and also shifted
-    Transformation smallAmmoTransforms = null;
-    Transformation largeAmmoTransforms = null;
-    Transformation leftAmmoTransforms = null;
-    if (ammoKey != null) {
-      // flipping rotates it 180 degrees, but because the origin is 0,0 instead of 0.5,0,5 it gets shifted
-      // I could do some composition to shift the orgin, but its faster to just correct for it below
-      Quaternionf ammoRotation = flipAmmo ? Axis.YP.rotationDegrees(-180) : null;
-      float flipOffset = flipAmmo ? 1 : 0;
-
-      // left if requested is based on either small or right, reusing a variable allows us to keep the one that ended up used.
-      Vector3f translation = new Vector3f(
-        smallAmmoOffset.x / 16 + flipOffset,
-        -smallAmmoOffset.y / 16,
-        1f / 16 + flipOffset
-      );
-      smallAmmoTransforms = new Transformation(translation, ammoRotation, null, null);
-      if (isLarge) {
-        translation = new Vector3f(
-          (offset.x/2 + largeAmmoOffset.x + 4f) / 16 + flipOffset,
-          (-offset.y/2 - largeAmmoOffset.y + 4f) / 16,
-          1f / 16 + flipOffset
-        );
-        largeAmmoTransforms = new Transformation(translation, ammoRotation, null, null);
-      }
-      // if we want left ammo, it copies whichever is the most recent from the two offsets
-      if (leftAmmo) {
-        translation = new Vector3f(translation);
-        translation.z = -1f / 16 + flipOffset;
-        leftAmmoTransforms = new Transformation(translation, ammoRotation, null, null);
-      }
-    }
-    overrides = new MaterialOverrideHandler(owner, toolParts, firstModifiers, showTraits, largeTransforms, modifierModels, overrides, ammoKey, flipAmmo, smallAmmoTransforms, largeAmmoTransforms, leftAmmoTransforms);
-    // bake the original with no tool, meaning it will skip modifiers and materials
-    return bakeInternal(owner, spriteGetter, largeTransforms, toolParts, modifierModels, firstModifiers, showTraits, List.of(), null, overrides, List.of(), List.of(), List.of());
-  }
-
-  /** Swaps out the large model for the small or gui model as needed */
-  private static class BakedToolModel extends BakedModelWrapper<BakedModel> {
-    /** Model to use for left-handed display. May be same as right-handed; ammo makes different */
-    private final BakedModel left;
-    /** Model to use for contexts requesting small models, such as smeltery blocks. Same as right if the tool has no large. */
-    private final BakedModel small;
-    /** Model to use in the GUI */
-    private final BakedModel gui;
-    public BakedToolModel(BakedModel right, BakedModel left, BakedModel small, BakedModel gui) {
-      super(right);
-      this.left = left;
-      this.small = small;
-      this.gui = gui;
+    /** Large-context (in-hand double-resolution) modifier texture roots (see {@link ModifierRoots}). */
+    public List<Identifier> largeModifierRoots() {
+      return modifierRoots.large();
     }
 
     @Override
-    public BakedModel applyTransform(ItemDisplayContext cameraTransformType, PoseStack mat, boolean applyLeftHandTransform) {
-      BakedModel model = originalModel;
-      if (cameraTransformType == ItemDisplayContext.GUI) {
-        model = gui;
-      } else if (cameraTransformType == ItemDisplayContext.FIRST_PERSON_LEFT_HAND || cameraTransformType == ItemDisplayContext.THIRD_PERSON_LEFT_HAND) {
-        model = left;
-      } else if (originalModel != small && SMALL_TOOL_TYPES.get(cameraTransformType.ordinal())) {
-        model = small;
-      }
-      return model.applyTransform(cameraTransformType, mat, applyLeftHandTransform);
+    public MapCodec<? extends ItemModel.Unbaked> type() {
+      return MAP_CODEC;
+    }
+
+    @Override
+    public void resolveDependencies(ResolvableModel.Resolver resolver) {
+      resolver.markDependency(baseModel);
+    }
+
+    @Override
+    public ItemModel bake(ItemModel.BakingContext context, Matrix4fc transformation) {
+      List<ToolPart> toolParts = parts.isEmpty() ? ToolPart.DEFAULT_PARTS : parts;
+      return new Baked(context, transformation, baseModel, toolParts, isLarge, modifierModels, smallModifierRoots(), largeModifierRoots(), firstModifiers, showTraits);
     }
   }
 
-  /**
-   * Data class for a single tool part
-   */
-  private record ToolPart(String name, int index) {
-    /** Default tool part instance for breakable textures */
-    public static final ToolPart DEFAULT = new ToolPart("tool", -1);
-    /** Default tool part list if one is not defined */
-    public static final List<ToolPart> DEFAULT_PARTS = List.of(DEFAULT);
-
-    /**
-     * If true, this part has material variants
-     */
-    public boolean hasMaterials() {
-      return index >= 0;
-    }
-
-    /**
-     * Gets the name for this part
-     * @param isLarge  If true, rendering a large tool
-     * @return Texture name for this part
-     */
-    public String getName(boolean isLarge) {
-      if (isLarge) {
-        return "large_" + name;
-      }
-      return name;
-    }
-
-    /**
-     * Reads a part from JSON
-     */
-    public static ToolPart read(JsonObject json) {
-      String name = GsonHelper.getAsString(json, "name");
-      int index = GsonHelper.getAsInt(json, "index", -1);
-      return new ToolPart(name, index);
-    }
-  }
-
-  /**
-   * Dynamic override handler to swap in the material texture
-   */
-  public static final class MaterialOverrideHandler extends NestedOverrides {
-
-    // contains all the baked models since they'll never change, cleared automatically as the baked model is discarded
-    private final Cache<ToolCacheKey, BakedModel> cache = CacheBuilder
-      .newBuilder()
-      // ensure we can display every single tool that shows in JEI, plus a couple extra
-      .maximumSize(MaterialRenderInfoLoader.INSTANCE.getAllRenderInfos().size() * 3L / 2)
-      .build();
-
-    // parameters needed for rebaking
-    private final IGeometryBakingContext owner;
+  /** Baked tool item model that resolves the geometry per tool NBT. */
+  private static final class Baked extends DynamicItemModel<ToolCacheKey> {
+    private final Identifier baseModelId;
     private final List<ToolPart> toolParts;
+    private final boolean isLarge;
+    private final List<Identifier> modifierModels;
+    private final List<Identifier> smallModifierRoots;
+    private final List<Identifier> largeModifierRoots;
     private final List<FirstModifier> firstModifiers;
     private final boolean showTraits;
-    @Nullable
-    private final Transformation largeTransforms;
-    private final ModifierModelMap modifierModels;
-    @Nullable
-    private final ResourceLocation ammoKey;
-    private final boolean flipAmmo;
-    @Nullable
-    private final Transformation smallAmmoTransforms;
-    @Nullable
-    private final Transformation largeAmmoTransforms;
-    @Nullable
-    private final Transformation leftAmmoTransforms;
 
-    private MaterialOverrideHandler(IGeometryBakingContext owner, List<ToolPart> toolParts, List<FirstModifier> firstModifiers, boolean showTraits, @Nullable Transformation largeTransforms, ModifierModelMap modifierModels, ItemOverrides nested, @Nullable ResourceLocation ammoKey, boolean flipAmmo, @Nullable Transformation smallAmmoTransforms, @Nullable Transformation largeAmmoTransforms, @Nullable Transformation leftAmmoTransforms) {
-      super(nested);
-      this.owner = owner;
+    // lazily resolved baking data, stable for the captured context
+    @Nullable
+    private ResolvedModel resolved;
+    @Nullable
+    private TextureSlots slots;
+    @Nullable
+    private Function<Material, TextureAtlasSprite> spriteGetter;
+    @Nullable
+    private ModifierModelMap modifierModelMap;
+    @Nullable
+    private ItemModel fallbackModel;
+
+    private Baked(ItemModel.BakingContext context, Matrix4fc transform, Identifier baseModelId, List<ToolPart> toolParts, boolean isLarge,
+                 List<Identifier> modifierModels, List<Identifier> smallModifierRoots, List<Identifier> largeModifierRoots,
+                 List<FirstModifier> firstModifiers, boolean showTraits) {
+      super(context, transform);
+      this.baseModelId = baseModelId;
       this.toolParts = toolParts;
+      this.isLarge = isLarge;
+      this.modifierModels = modifierModels;
+      this.smallModifierRoots = smallModifierRoots;
+      this.largeModifierRoots = largeModifierRoots;
       this.firstModifiers = firstModifiers;
       this.showTraits = showTraits;
-      this.largeTransforms = largeTransforms;
-      this.modifierModels = modifierModels;
-      this.ammoKey = ammoKey;
-      this.flipAmmo = flipAmmo;
-      this.smallAmmoTransforms = smallAmmoTransforms;
-      this.largeAmmoTransforms = largeAmmoTransforms;
-      this.leftAmmoTransforms = leftAmmoTransforms;
     }
 
-    /**
-     * Bakes a copy of this model using the given material
-     * @param materials  New materials for the model
-     * @return  Baked model
-     */
-    private BakedModel bakeDynamic(List<MaterialVariantId> materials, IToolStackView tool, ItemStack ammo, int seed) {
-      // start by finding ammo quads
-      List<BakedQuad> smallAmmoQuads = List.of();
-      List<BakedQuad> largeAmmoQuads = List.of();
-      List<BakedQuad> leftAmmoQuads = List.of();
-      if (!ammo.isEmpty()) {
-        // find ammo model, this automatically resolves ammo overrides
-        BakedModel ammoModel = Minecraft.getInstance().getItemRenderer().getModel(ammo, null, null, seed);
-        if (ammoModel != Minecraft.getInstance().getModelManager().getMissingModel()) {
-          // get all the quads for the ammo model
-          List<BakedQuad> ammoQuads = new ArrayList<>();
-          RandomSource rand = RandomSource.create();
-          for (Direction direction : Direction.values()) {
-            ammoQuads.addAll(ammoModel.getQuads(null, direction, rand, ModelData.EMPTY, null));
-          }
-          ammoQuads.addAll(ammoModel.getQuads(null, null, rand, ModelData.EMPTY, null));
-
-          // bake tints into static colors; saves us having to redirect item colors which is slow
-          Int2IntMap tints = new Int2IntArrayMap();
-          ItemColors colors = Minecraft.getInstance().getItemColors();
-          Int2IntFunction colorGetter = tint -> ColoredBlockModel.swapColorRedBlue(colors.getColor(ammo, tint));
-          ammoQuads = ammoQuads.stream().map(quad -> {
-            if (quad.isTinted() || (flipAmmo && quad.getDirection().getAxis() != Direction.Axis.Y)) {
-              int[] vertices = quad.getVertices();
-              if (quad.isTinted()) {
-                int abgr = 0xFF000000 | tints.computeIfAbsent(quad.getTintIndex(), colorGetter);
-                vertices = Arrays.copyOf(vertices, vertices.length);
-                for (int i = 0; i < 4; i++) {
-                  vertices[i * IQuadTransformer.STRIDE + IQuadTransformer.COLOR] = abgr;
-                }
-              }
-              Direction direction = quad.getDirection();
-              if (flipAmmo && direction.getAxis() != Direction.Axis.Y) {
-                direction = direction.getOpposite();
-              }
-              return new BakedQuad(vertices, -1, direction, quad.getSprite(), quad.isShade(), quad.hasAmbientOcclusion());
-            }
-            return quad;
-          }).toList();
-          // got our quads, now we need to offset them for the model
-          if (smallAmmoTransforms != null) {
-            smallAmmoQuads = QuadTransformers.applying(smallAmmoTransforms).process(ammoQuads);
-          }
-          if (largeAmmoTransforms != null) {
-            largeAmmoQuads = QuadTransformers.applying(largeAmmoTransforms).process(ammoQuads);
-          }
-          if (leftAmmoTransforms != null) {
-            leftAmmoQuads = QuadTransformers.applying(leftAmmoTransforms).process(ammoQuads);
-          }
-        }
+    /** Resolves the baker-dependent data once for the captured baking context */
+    private void ensureResolved() {
+      if (resolved == null) {
+        ModelBaker baker = context.blockModelBaker();
+        resolved = baker.getModel(baseModelId);
+        slots = resolved.getTopTextureSlots();
+        ResolvedModel resolvedModel = resolved;
+        spriteGetter = mat -> baker.materials().get(mat, resolvedModel).sprite();
+        modifierModelMap = ModifierModelMapManager.INSTANCE.getModelsForTool(spriteGetter, modifierModels, smallModifierRoots, largeModifierRoots, baseModelId);
       }
-
-      // bake internal does not require an instance to bake, we can pass in whatever material we want
-      // use empty override list as the sub model never calls overrides, and already has a material
-      return bakeInternal(owner, Material::sprite, largeTransforms, toolParts, modifierModels, firstModifiers, showTraits, materials, tool, ItemOverrides.EMPTY, smallAmmoQuads, largeAmmoQuads, leftAmmoQuads);
     }
 
     @Nullable
     @Override
-    public BakedModel resolve(BakedModel originalModel, ItemStack stack, @Nullable ClientLevel world, @Nullable LivingEntity entity, int seed) {
-      BakedModel resolved = super.resolve(originalModel, stack, world, entity, seed);
-      if (resolved != originalModel) {
-        return resolved;
-      }
-      
-      // use material IDs for the sake of internal rendering materials
+    protected ToolCacheKey getCacheKey(ItemStack stack) {
       List<MaterialVariantId> materialIds = MaterialIdNBT.from(stack).getMaterials();
       IToolStackView tool = ToolStack.from(stack);
 
-      // if nothing unique, render original
+      // if nothing unique, render the fallback (base model without materials/modifiers)
       ModifierNBT modifiers = showTraits ? tool.getModifiers() : tool.getUpgrades();
-      skip:
-      if (materialIds.isEmpty() && modifiers.isEmpty()) {
-        for (FirstModifier modifier : firstModifiers) {
-          if (modifier.forced) {
-            break skip;
-          }
+      boolean forced = false;
+      for (FirstModifier modifier : firstModifiers) {
+        if (modifier.forced) {
+          forced = true;
+          break;
         }
-        return originalModel;
+      }
+      if (materialIds.isEmpty() && modifiers.isEmpty() && !forced) {
+        return null;
       }
 
-      // build the cache key for the modifiers, based on what the modifier requests
-      // for many, it is just the modifier entry, but they can have more complex keys if needed
+      // ensure modifier models are loaded so we can compute their cache keys
+      ensureResolved();
+      ModifierModelMap models = Objects.requireNonNull(modifierModelMap);
+
+      // build the modifier cache key list, based on what each modifier requests
       ImmutableList.Builder<Object> builder = ImmutableList.builder();
       Set<ModifierId> hidden = ModifierSetWorktableRecipe.getModifierSet(tool.getPersistentData(), TConstruct.getResource("invisible_modifiers"));
       ModifierEntry[] firstEntries = new ModifierEntry[firstModifiers.size()];
-      for (ModifierEntry entry : modifiers) {
+      for (ModifierEntry entry : modifiers.getModifiers()) {
         ModifierId id = entry.getId();
         int index = FirstModifier.indexOf(firstModifiers, id);
         if (index != -1) {
-          // handle all the first entries together, keeps their order consistent
           firstEntries[index] = entry;
         } else if (!hidden.contains(id)) {
-          IBakedModifierModel model = modifierModels.get(id);
+          IBakedModifierModel model = models.get(id);
           if (model != null) {
             Object cacheKey = model.getCacheKey(tool, entry);
             if (cacheKey != null) {
@@ -806,7 +441,7 @@ public class ToolModel implements IUnbakedGeometry<ToolModel> {
         FirstModifier modifier = firstModifiers.get(i);
         ModifierEntry entry = firstEntries[i];
         if (entry != null || modifier.forced) {
-          IBakedModifierModel model = modifierModels.get(modifier.id);
+          IBakedModifierModel model = models.get(modifier.id);
           if (model != null) {
             if (entry == null) {
               entry = new ModifierEntry(modifier.id, 0);
@@ -818,38 +453,80 @@ public class ToolModel implements IUnbakedGeometry<ToolModel> {
           }
         }
       }
-      for (ModifierModel model : modifierModels.constant().values()) {
+      for (ModifierModel model : models.constant().values()) {
         Object cacheKey = model.getCacheKey(tool, ModifierEntry.EMPTY);
         if (cacheKey != null) {
           builder.add(cacheKey);
         }
       }
 
-      // fetch ammo info from the stack
-      ItemStack ammo;
-      ModDataNBT persistentData = tool.getPersistentData();
-      if (ammoKey != null && persistentData.contains(ammoKey, Tag.TAG_COMPOUND)) {
-        RegistryAccess access = world != null ? world.registryAccess() : Minecraft.getInstance().level != null ? Minecraft.getInstance().level.registryAccess() : RegistryAccess.EMPTY;
-        ammo = ItemStack.parse(access, persistentData.getCompound(ammoKey)).orElse(ItemStack.EMPTY);
-        builder.add(ammo.getItem());
-        CompoundTag tag = TagUtil.getTag(ammo);
-        if (tag != null) {
-          builder.add(tag);
-        }
-      } else {
-        ammo = ItemStack.EMPTY;
+      return new ToolCacheKey(materialIds, builder.build(), tool);
+    }
+
+    @Override
+    protected ItemModel getFallback() {
+      if (fallbackModel == null) {
+        fallbackModel = bake(List.of(), null);
+      }
+      return fallbackModel;
+    }
+
+    @Override
+    protected ItemModel bakeModel(ToolCacheKey key) {
+      return bake(key.materials, key.tool);
+    }
+
+    /**
+     * Bakes the tool geometry for the given materials and tool.
+     * <p>
+     * A single identity-transformed {@link QuadCollection} is produced (correct for GUI/inventory and non-large tools);
+     * per-context large/small/left-hand variants and ammo overlays are validated in-game (see class docs).
+     */
+    private ItemModel bake(List<MaterialVariantId> materials, @Nullable IToolStackView tool) {
+      ensureResolved();
+      ModelBaker baker = context.blockModelBaker();
+      ResolvedModel resolvedModel = Objects.requireNonNull(resolved);
+      TextureSlots textureSlots = Objects.requireNonNull(slots);
+      Function<Material, TextureAtlasSprite> sprites = Objects.requireNonNull(spriteGetter);
+      ModifierModelMap models = Objects.requireNonNull(modifierModelMap);
+
+      QuadCollection.Builder builder = new QuadCollection.Builder();
+      ItemLayerPixels pixels = new ItemLayerPixels();
+      Transformation transforms = Transformation.IDENTITY;
+
+      // add modifier quads first so the pixel mask is populated before the parts beneath
+      if (tool != null && !models.isEmpty()) {
+        addModifierQuads(sprites, models, firstModifiers, showTraits, tool, quads -> quads.forEach(quad -> addToolQuad(builder, quad)), pixels, transforms, false);
       }
 
-      // render special model
-      try {
-        return cache.get(new ToolCacheKey(materialIds, builder.build()), () -> bakeDynamic(materialIds, tool, ammo, seed));
-      } catch (ExecutionException e) {
-        TConstruct.LOG.error("Failed to get tool model from cache", e);
-        return originalModel;
+      // add quads for all parts, in reverse so earlier parts render on top
+      for (int i = toolParts.size() - 1; i >= 0; i--) {
+        ToolPart part = toolParts.get(i);
+        String name = part.getName(false);
+        Material texture = textureSlots.getMaterial(name);
+        if (texture == null) {
+          continue;
+        }
+        if (part.hasMaterials()) {
+          int index = part.index();
+          MaterialVariantId material = index < materials.size() ? materials.get(index) : IMaterial.UNKNOWN_ID;
+          if (Config.CLIENT.logMissingMaterialTextures.get()) {
+            MaterialModel.validateMaterialTextures(textureSlots, sprites, name, material);
+          }
+          for (BakedQuad quad : MaterialModel.getQuadsForMaterial(sprites, texture, material, -1, transforms, pixels)) {
+            addToolQuad(builder, quad);
+          }
+        } else {
+          Material.Baked sprite = baker.materials().resolveSlot(textureSlots, name, resolvedModel);
+          for (BakedQuad quad : MantleItemLayerModel.getQuadsForSprite(-1, -1, sprite, transforms, 0, pixels)) {
+            addToolQuad(builder, quad);
+          }
+        }
       }
+
+      QuadCollection quads = builder.build();
+      ModelRenderProperties properties = ModelRenderProperties.fromResolvedModel(baker, resolvedModel, textureSlots);
+      return new CuboidItemModelWrapper(List.of(), quads, properties, transform);
     }
   }
-
-  /** Simple data class to cache built tool modifiers, contains everything unique in the textures */
-  private record ToolCacheKey(List<MaterialVariantId> materials, List<Object> modifierData) {}
 }
